[package]
name = "bilzaa2dcounter"
version = "0.1.3"
authors = ["bilal <skillzaa.com@gmail.com>"]
edition = "2018"
description = "It takes a time and then check the animation and return the current value"
repository = "https://github.com/skillzaa/animation.git"
homepage = "https://github.com/skillzaa/animation.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
